Left aligns property page details, fixes header and badge padding

--- a/src/site/_includes/type.scss
+++ b/src/site/_includes/type.scss
@@ -99,6 +99,14 @@ address {
   border-left: 0.4em solid var(--color-orange);
 }
 
+h3 .badge {
+  display: inline-block;
+  position: relative;
+  margin-left: 1em;
+  font-size: 0.8em;
+  top: -0.2em;
+}
+
 .results_list {
   font-size: 0.9em;
   list-style: none;
